@@ -1,3 +1,8 @@
+2007-02-23  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libgfortran/30910	
+	* gfortran.dg/fmt_zero_precision.f90: Update test.
+
 2007-02-23  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/30793
